2006-09-06  Simon Josefsson  <jas@extundo.com>

	* mml2015.el (mml2015-use): Doc fix, mention epg.

2006-09-06  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-use): Default to epg, if available.

2006-09-06  Daiki Ueno  <ueno@unixuser.org>

	* mml1991.el (mml1991-epg-sign): Don't lookup a private kye by
	message-sender.
	(mml1991-epg-encrypt): Ditto.
	* mml2015.el (mml2015-epg-sign): Don't lookup a private key by
	message-sender.
	(mml2015-epg-encrypt): Ditto.

2006-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-send-mail-with-sendmail): Look for sendmail in
	several common directories.

2006-09-05  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-encrypt): Expand group configuration.
	* mml1991.el (mml1991-epg-encrypt): Expand group configuration.

2006-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-decode-encoded-words): Make it fast.

2006-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-decode-encoded-words): Don't infloop in XEmacs.

	* rfc2047.el (rfc2047-strip-backslashes-in-quoted-strings): Decode `\\'
	in quoted string into `\'.

2006-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-quote-special-characters-in-quoted-strings):
	Use standard-syntax-table.

2006-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-decode-address-function): New variable.
	(article-decode-encoded-words): Use it to decode headers which are
	assumed to contain addresses.
	(gnus-mime-delete-part): Remove useless `or'.

	* gnus-sum.el (gnus-decode-encoded-address-function): New variable.
	(gnus-summary-from-or-to-or-newsgroups): Use it to decode To header.
	(gnus-nov-parse-line): Use it to decode From header.
	(gnus-get-newsgroup-headers): Ditto.
	(gnus-summary-enter-digest-group): Use it to decode `to-address'.

	* mail-parse.el (mail-decode-encoded-address-region): New alias.
	(mail-decode-encoded-address-string): New alias.
